--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,17 @@
 </head>
 
 <body>
-    <load="./partials/header.html" />
+<div class="container">
+    <ul class="nav">
+        <li class="nav-item">
+            <a href="./1-gallery.html" class="nav-link">GALLERY</a>
+        </li>
+        <li class="nav-item">
+            <a href="./2-form.html" class="nav-link">FORM</a>
+        </li>
+    </ul>
+</div>  <!-- <load="./partials/header.html" /> -->
+
 </body>
 
 </html>
